Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectBoolObj.quorum
class Main
    action Main
        Boolean v
        v:SetValue(true)
        Test(v)
    end

    action Test(Object var)
        Boolean v = cast(Boolean, var)
        if v:GetValue() = true
            output "passed"
        end
    end
end
