Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanBoolObj.quorum
class Main
    action Main
        Boolean v
        v:SetValue(true)
        Test(v)
    end

    action Test(boolean var)
    end
end
